# agentic-ml-loop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  experiment.py  guidelines.md  learnings.md  program.md  pyproject.toml
.agents/docs/: architecture.md  runners.md
.agents/skills/experiment-spec/: SKILL.md
.github/workflows/: test.yml
agents/docs/: architecture.md
agents/skills/experiment-notebook/: SKILL.md
agents/skills/experiment-spec/: SKILL.md
examples/: README.md  demo_bootstrap_replay.html
examples/warehouse/postgres/: README.md  docker-compose.yml  seed.sql
experiments/demo_bootstrap/: research_journal.md  research_sources.md  results.json
experiments/demo_classification/: experiment.md  research_journal.md  research_sources.md  results.json
experiments/demo_deep/: research_journal.md  research_sources.md  results.json
experiments/demo_regression/: experiment.md  feedback.json  research_journal.md  research_sources.md  results.json
experiments/templates/: demo_bootstrap.md  demo_bootstrap_research_sources.md  demo_classification.md  demo_deep.md  demo_regression.md  external-target-fixture-contract.json  model-search.md
lib/: analysis.py  analysis_utils.py  candidate_result.py  diagnostics.py  evaluation_review.py  io.py  learnings.py  notebook_codegen.py  notebook_export.py  notebook_recipe.py  observations.py  paths.py  referee.py  result_schema.py  runner.py  signals.py  utils.py
lib/demo_bootstrap/: context.md  data.py  error_analysis.py  generate_data.py  modeling.py  roads_not_taken.py
lib/demo_classification/: __init__.py  data.py  error_analysis.py  generate_data.py  modeling.py
lib/demo_deep/: __init__.py  data.py  generate_data.py  modeling.py
lib/demo_regression/: __init__.py  bootstrap_ci.py  data.py  error_analysis.py  generate_data.py  modeling.py
lib/external_targets/: __init__.py  box_office_oracle.py  box_office_oracle_eval.py  candidate_specs.py  common.py  estate_value_index.py  estate_value_index_eval.py  final_holdout.py  fixtures.py
lib/sources/: __init__.py  __main__.py  adapters.py  cli.py  errors.py  extractor.py  manifest.py  query.py  registry.py  snapshot.py
lib/sources/bundles/bigquery/: SETUP.md  source.json
lib/sources/bundles/databricks/: SETUP.md  source.json
lib/sources/bundles/duckdb/: SETUP.md  source.json
lib/sources/bundles/postgres/: SETUP.md  source.json
lib/sources/bundles/redshift/: SETUP.md  source.json
lib/sources/bundles/snowflake/: SETUP.md  source.json
loop/: README.md  __init__.py  artifacts.py  bench.py  constants.py  contracts.py  core.py  cycle_attempt.py  enums.py  hooks.py  invoke.py  ledger.py  loop_state.py  prompts.py  status.py  stop_policy.py  ui.py
runners/: __init__.py  demo_bootstrap_runner.py  demo_classification_runner.py  demo_deep_runner.py  demo_regression_runner.py
tests/: test_analysis.py  test_analysis_utils.py  test_architecture_boundaries.py  test_bench.py  test_candidate_specs.py  test_cross_learnings.py  test_demo_deep_runner.py  test_demo_regression_runner.py  test_demo_runner.py  test_dependency_profiles.py  test_diagnostics.py  test_evaluation_review.py  test_experiment.py  test_external_target_fixtures.py  test_invoke.py  test_io.py  test_learnings.py  test_loop_artifacts.py  test_loop_contracts.py  test_loop_core.py  test_loop_cycle_attempt.py  test_loop_enums.py  test_loop_hooks.py  test_loop_prompts.py  test_loop_ui.py  test_notebook_recipe.py  test_observations.py  test_paths.py  test_referee.py  test_result_schema.py  test_runner.py  test_signals.py  test_sources.py  test_utils.py  test_viz.py
tests/loop/: conftest.py
viz/: README.md  bundle.py  generate.py
viz/renderer/: character.js  engine.js  index.html  room.js  script.js  sound.js  ui.js
viz/templates/: room_layout.json
