[project]
name = "agentic-ml-loop"
version = "0.1.0"
description = "Agent-driven offline model-search loop"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Adam Thuvesen" }]
keywords = ["agents", "machine-learning", "experimentation", "offline-evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
models = [
    "catboost>=1.2.7",
    "duckdb>=1.1.0",
    "joblib>=1.4.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.10.8",
    "optuna>=4.3.0",
    "polars>=1.0.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.0",
    "seaborn>=0.13.0",
    "shap>=0.46.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.0",
    "xgboost>=3.0.4",
]
viz = []

[dependency-groups]
dev = ["pre-commit>=4.0.0", "pytest>=8.0", "ruff>=0.11"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["lib*", "loop*", "runners*"]

[tool.setuptools]
py-modules = ["experiment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["experiments/*/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# Line length is enforced by the formatter; don't nag about unsplittable
# strings, URLs, and f-strings.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
